--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             {%for i in dictdata%}
             <tr>
                     <td>{{i[0].title }}</td>
+                    <td>{{i[0].published_date}}</td>
             </tr>
             {%endfor%}
         </table>
